welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: not found: value num
  for(i<- 1 to num%getMondeHauteur()){
               ^